--- a/word_relay/index.html
+++ b/word_relay/index.html
@@ -41,7 +41,7 @@
 			</div>
 		</form>
 	</div>
-	<div class="error-msg js-error-msg">아아앙아아</div>
+	<div class="error-msg js-error-msg"></div>
 	<div class="word-list">
 		<h3 class="js-prev-word"></h3>
 		<ul class="js-prev-word-list"></ul>
