--- a/card_matching/index.html
+++ b/card_matching/index.html
@@ -70,85 +70,102 @@
     .card.flip .card-back {
       transform: rotateY(360deg);
     }
+    .btn-game-init {
+      margin-top: 10px;
+      font-size: 18px;
+      padding: 1em 2em;
+
+      
+    }
   </style>
   <div class="game-board js-game-board"></div>
+  <button onclick="gameInit();" class="btn-game-init">게임 리셋</button>
   <script>
-    const boardCol = 5;
-    const boardRow = 4;
-    const gameBoard = document.querySelector('.js-game-board');
-    const cardColorArr = ['red', 'green', 'darkgray', 'blue', 'purple', 'orange', 'pink', 'black', 'tomato', 'aqua'];
-    const cardColorTwiceArr = [...cardColorArr, ...cardColorArr];
-    const randomCardColorArr = [];
-    while(cardColorTwiceArr.length > 0) {
-      const selectColor = cardColorTwiceArr.splice(Math.floor(Math.random() * cardColorTwiceArr.length), 1);
-      randomCardColorArr.push(selectColor[0]);
-    }
-    const initCardArr = [];
-    let flipCardArr = [];
-    let openCardArr = [];
+    function gameInit() {
+      const gameBoard = document.querySelector('.js-game-board');
+      gameBoard.innerHTML = '';
+      const boardCol = 5;
+      const boardRow = 4;
+      const cardColorArr = ['red', 'green', 'darkgray', 'blue', 'purple', 'orange', 'pink', 'black', 'tomato', 'aqua'];
+      const cardColorTwiceArr = [...cardColorArr, ...cardColorArr];
+      let randomCardColorArr = [];
+      let initCardArr = [];
+      let flipCardArr = [];
+      let openCardArr = [];
 
-    gameBoard.style.gridTemplateColumns = `repeat(${boardCol}, 120px)`;
-    gameBoard.style.width = `${boardCol * 130 - 10}px`;
-    const boardTotalSquare = boardCol * boardRow;
+      gameBoard.style.gridTemplateColumns = `repeat(${boardCol}, 120px)`;
+      gameBoard.style.width = `${boardCol * 130 - 10}px`;
+      const boardTotalSquare = boardCol * boardRow;
 
-    function checkGameEnd() {
-      if(openCardArr.length === boardTotalSquare / 2) {
-        const endMsg = document.createElement('div');
-        endMsg.className = 'game-end-msg';
-        endMsg.innerHTML = 'Game End';
-        setTimeout(() => {
-          gameBoard.appendChild(endMsg);
-        }, 500);
-      }
-    }
-
-    for (let i = 0; i < boardTotalSquare; i++) {
-      const cardColor = randomCardColorArr[i];
-      const card = document.createElement('div');
-      const card_front = document.createElement('div');
-      const card_back = document.createElement('div');
-      card.className = 'card';
-      card_front.className = 'card-front';
-      card_back.className = 'card-back';
-      card_front.textContent = 'F';
-      card_back.style.backgroundColor = cardColor;
-      card_back.textContent = cardColor;
-      card_back.dataset.color = cardColor;
-      card.appendChild(card_front);
-      card.appendChild(card_back);
-
-      card.addEventListener('click', () => {
-        card.classList.add('flip');
-        flipCardArr.push(card);
-        if(flipCardArr.length > 1) {
-          if(flipCardArr[0].lastChild.dataset.color === flipCardArr[1].lastChild.dataset.color) {
-            openCardArr.push(card);
-            checkGameEnd();
-          }
-          else {
-            const copyFlipCardArr = [...flipCardArr];
-            setTimeout(() => {
-              copyFlipCardArr.forEach(card => {
-                card.classList.remove('flip');
-              });
-            }, 500);
-          }
-          flipCardArr = [];
+      function shakeCardColorArr() {
+        randomCardColorArr = [];
+        while(cardColorTwiceArr.length > 0) {
+          const selectColor = cardColorTwiceArr.splice(Math.floor(Math.random() * cardColorTwiceArr.length), 1);
+          randomCardColorArr.push(selectColor[0]);
         }
-      });
-      gameBoard.appendChild(card);
+      }
+
+      function checkGameEnd() {
+        if(openCardArr.length === boardTotalSquare / 2) {
+          const endMsg = document.createElement('div');
+          endMsg.className = 'game-end-msg';
+          endMsg.innerHTML = 'Game End';
+          setTimeout(() => {
+            gameBoard.appendChild(endMsg);
+          }, 500);
+        }
+      }
+
+      shakeCardColorArr();
+      for (let i = 0; i < boardTotalSquare; i++) {
+        const cardColor = randomCardColorArr[i];
+        const card = document.createElement('div');
+        const card_front = document.createElement('div');
+        const card_back = document.createElement('div');
+        card.className = 'card';
+        card_front.className = 'card-front';
+        card_back.className = 'card-back';
+        card_front.textContent = 'F';
+        card_back.style.backgroundColor = cardColor;
+        card_back.textContent = cardColor;
+        card_back.dataset.color = cardColor;
+        card.appendChild(card_front);
+        card.appendChild(card_back);
+
+        card.addEventListener('click', () => {
+          card.classList.add('flip');
+          flipCardArr.push(card);
+          if(flipCardArr.length > 1) {
+            if(flipCardArr[0].lastChild.dataset.color === flipCardArr[1].lastChild.dataset.color) {
+              openCardArr.push(card);
+              checkGameEnd();
+            }
+            else {
+              const copyFlipCardArr = [...flipCardArr];
+              setTimeout(() => {
+                copyFlipCardArr.forEach(card => {
+                  card.classList.remove('flip');
+                });
+              }, 500);
+            }
+            flipCardArr = [];
+          }
+        });
+        gameBoard.appendChild(card);
+
+        setTimeout(() => {
+          card.classList.add('flip');
+          initCardArr.push(card);
+        }, 500 + 100 * i);
+      }
 
       setTimeout(() => {
-        card.classList.add('flip');
-        initCardArr.push(card);
-      }, 500 + 100 * i);
+        initCardArr.forEach(card => {
+          card.classList.remove('flip');
+        });
+      }, 1500 + 100 * boardTotalSquare);
     }
-
-    setTimeout(() => {
-      initCardArr.forEach(card => {
-        card.classList.remove('flip');
-      });
-    }, 1500 + 100 * boardTotalSquare);
+    gameInit();
   </script>
 </body>
 </html>
